--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,6 +7,35 @@ body {
     background-color: #FEC7D7;
 }
 
+.img-ini {
+    /*display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 30%;
+    margin-top: 55%;*/
+    text-align: center;
+    width: 100px;
+    height: 100px;
+    position: relative;
+    animation: welcome 5s ;
+}
+
+@keyframes animation-right-left {
+    0% {
+        transform: translateX(100%);
+        opacity: 0;
+    }
+
+    100% {
+        transform: translateX(0%);
+        opacity: 1;
+    }
+}
+
+#item {
+    animation: animation-right-left ease 2s backwards;
+}
+
 #test {
     padding-bottom: 70px;
 }
@@ -43,12 +72,42 @@ body {
     color: white;
 }
 
+.opaq {
+    opacity: 0.5;
+}
+
 #active, .save {
     background: #0E172C;
     color: white;
 }
 
-@media (min-width: 576px) {
+@keyframes welcome {
+    0% {
+        top: 280px;
+        left: 135px;
+        transform: scale(0.1);
+    }
+    100% {
+        top: 300px;
+        left: 135px;
+        transform: scale(2);
+        visibility: hidden;
+    }
+}
+
+@media (min-width: 576px) {}
+
+@media (min-width: 768px) {
+    * {
+        padding: 0;
+        margin: 0;
+    }
+    /*.img-ini{
+        flex-direction: column;
+        align-items: center;
+        padding: 30px;
+        margin-top: 450px;
+    }
     #pruebas{
         display: flex;
         align-items: center;
@@ -67,5 +126,50 @@ body {
         height: auto;
         width: 50%;
         margin: 0 auto;
+    }*/
+}
+
+@media (min-width: 992px) {
+    .img-ini {
+        /*flex-direction: column;
+        align-items: center;
+        padding: 30px;
+        margin-top: 450px;*/
+        text-align: center;
+        width: 100px;
+        height: 100px;
+        position: relative;
+        animation: welcome 5s infinite;
+    }
+    #pruebas {
+        display: flex;
+        align-items: center;
+    }
+    #test, #chat {
+        width: 40%;
+        margin: 0 auto;
+    }
+    #move1 {
+        height: 30%;
+        background: white;
+        width: 30%;
+        margin: 0 auto;
+    }
+    #move2 {
+        height: auto;
+        width: 50%;
+        margin: 0 auto;
+    }
+    @keyframes welcome {
+        0% {
+            top: 430px;
+            left: 900px;
+            transform: scale(0.1);
+        }
+        100% {
+            top: 550px;
+            left: 900px;
+            transform: scale(3);
+        }
     }
 }
