--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,18 +7,35 @@ body {
     background-color: #FEC7D7;
 }
 
-.img-ini {
-    /*display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 30%;
-    margin-top: 55%;*/
-    text-align: center;
-    width: 100px;
-    height: 100px;
-    position: relative;
-    animation: welcome 5s ;
+
+#inicial {
+    position: fixed;
+    width: 500px;
+    height: 200px;
+    top: 50%;
+    left: 50%;
+    margin-top: -100px; /* Negative half of height. */
+    margin-left: -250px; /* Negative half of width. */
 }
+ 
+@keyframes initial-frame {
+    0% {
+        -webkit-transform:scale(1);
+        transform:scale(1);
+        opacity: 0;
+    }
+
+    100% {
+        -webkit-transform:scale(1.3);
+        transform:scale(1.3);
+        opacity: 1;
+    }
+}
+
+/*#inicial:hover .imagen{
+    -webkit-transform:scale(5);transform:scale(5);
+    /*animation: initial-frame ease 2s backwards;
+}*/
 
 @keyframes animation-right-left {
     0% {
@@ -81,66 +98,20 @@ body {
     color: white;
 }
 
-@keyframes welcome {
-    0% {
-        top: 280px;
-        left: 135px;
-        transform: scale(0.1);
-    }
-    100% {
-        top: 300px;
-        left: 135px;
-        transform: scale(2);
-        visibility: hidden;
-    }
-}
+@media (min-width: 576px) {
 
-@media (min-width: 576px) {}
+}
 
 @media (min-width: 768px) {
     * {
         padding: 0;
         margin: 0;
     }
-    /*.img-ini{
-        flex-direction: column;
-        align-items: center;
-        padding: 30px;
-        margin-top: 450px;
-    }
-    #pruebas{
-        display: flex;
-        align-items: center;
-    }
-    #test, #chat {
-        width: 40%;
-        margin: 0 auto;
-    }
-    #move1 {
-        height: 30%;
-        background: white;
-        width: 30%;
-        margin: 0 auto;
-    }
-    #move2 {
-        height: auto;
-        width: 50%;
-        margin: 0 auto;
-    }*/
+   
 }
 
 @media (min-width: 992px) {
-    .img-ini {
-        /*flex-direction: column;
-        align-items: center;
-        padding: 30px;
-        margin-top: 450px;*/
-        text-align: center;
-        width: 100px;
-        height: 100px;
-        position: relative;
-        animation: welcome 5s infinite;
-    }
+
     #pruebas {
         display: flex;
         align-items: center;
@@ -159,17 +130,5 @@ body {
         height: auto;
         width: 50%;
         margin: 0 auto;
-    }
-    @keyframes welcome {
-        0% {
-            top: 430px;
-            left: 900px;
-            transform: scale(0.1);
-        }
-        100% {
-            top: 550px;
-            left: 900px;
-            transform: scale(3);
-        }
     }
 }
