--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,7 +7,6 @@ body {
     background-color: #FEC7D7;
 }
 
-
 #inicial {
     position: fixed;
     width: 500px;
@@ -99,7 +98,11 @@ body {
 }
 
 @media (min-width: 576px) {
-
+    #pruebas {
+        display: flex;
+        align-items: center;
+        padding: auto;
+    }
 }
 
 @media (min-width: 768px) {
@@ -115,6 +118,7 @@ body {
     #pruebas {
         display: flex;
         align-items: center;
+        padding-top: 200px;
     }
     #test, #chat {
         width: 40%;
